--- a/src/main/resources/static/payment_resolution_test.html
+++ b/src/main/resources/static/payment_resolution_test.html
@@ -8,19 +8,20 @@
 		<meta name="keywords" content="Craft, bootstrap, bootstrap 5, admin themes, dark mode, free admin themes, bootstrap admin, bootstrap dashboard" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="canonical" href="https://preview.keenthemes.com/craft" />
-		<link rel="shortcut icon" href="resource/assets/media/logos/favicon.ico" />
+		<link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
 		<!--begin::Fonts(mandatory for all pages)-->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
 		<!--end::Fonts-->
 		<!--begin::Vendor Stylesheets(used for this page only)-->
-		<link href="resource/assets/plugins/custom/leaflet/leaflet.bundle.css" rel="stylesheet" type="text/css" />
-		<link href="resource/assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css" />
+		<link href="assets/plugins/custom/leaflet/leaflet.bundle.css" rel="stylesheet" type="text/css" />
+		<link href="assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css" />
 		<!--end::Vendor Stylesheets-->
 		<!--begin::Global Stylesheets Bundle(mandatory for all pages)-->
-		<!-- <link href="resource/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
+		<link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
 		
-		<link href="resource/assets/css/style.bundle.css" rel="stylesheet" type="text/css" /> -->
+		<link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
 		<!--end::Global Stylesheets Bundle-->
+		<script src="assets/plugins/global/plugins.bundle.js"></script>
 		<style>
 			.chart-div{
 				display: flex;
@@ -219,7 +220,7 @@
 					<div class="modal-body">
 						<div class="mb-0 row" style="margin: 10px;">
 							<div class="col-3 d-flex align-items-center">
-								<label class="form-label mb-0">날짜선택</label>
+								<label class="form-label" mb-0>날짜선택</label>
 							</div>
 							<div class="col-9 col-md-8">
 								<input class="form-control form-control-solid" placeholder="Pick date range" id="kt_daterangepicker_3"/>
@@ -256,9 +257,10 @@
 		<!--end::modal-->
 								
 		<!--begin::Javascript-->
+		<script>var hostUrl = "assets/";</script>
 		<!--begin::Global Javascript Bundle(mandatory for all pages)-->
-		<!-- <script src="resource/assets/plugins/global/plugins.bundle.js"></script>
-		<script src="resource/assets/js/scripts.bundle.js"></script> -->
+		<script src="assets/plugins/global/plugins.bundle.js"></script>
+		<script src="assets/js/scripts.bundle.js"></script>
 		<!--end::Global Javascript Bundle-->
 		<!--end::Javascript-->
 	</body>
