--- a/src/main/resources/static/reqVac_test.html
+++ b/src/main/resources/static/reqVac_test.html
@@ -8,18 +8,17 @@
 		<meta name="keywords" content="Craft, bootstrap, bootstrap 5, admin themes, dark mode, free admin themes, bootstrap admin, bootstrap dashboard" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="canonical" href="https://preview.keenthemes.com/craft" />
-		<link rel="shortcut icon" href="resource/assets/media/logos/favicon.ico" />
+		<link rel="shortcut icon" href="/resource/assets/media/logos/favicon.ico" />
 		<!--begin::Fonts(mandatory for all pages)-->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
 		<!--end::Fonts-->
 		<!--begin::Vendor Stylesheets(used for this page only)-->
-		<link href="resource/assets/plugins/custom/leaflet/leaflet.bundle.css" rel="stylesheet" type="text/css" />
-		<link href="resource/assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css" />
+		<link href="/resource/assets/plugins/custom/leaflet/leaflet.bundle.css" rel="stylesheet" type="text/css" />
+		<link href="/resource/assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css" />
 		<!--end::Vendor Stylesheets-->
 		<!--begin::Global Stylesheets Bundle(mandatory for all pages)-->
-		<!-- <link href="resource/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-		
-		<link href="resource/assets/css/style.bundle.css" rel="stylesheet" type="text/css" /> -->
+		<!-- <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
+		<link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" /> -->
 		<!--end::Global Stylesheets Bundle-->
 		<style>
 			.chart-div{
@@ -45,7 +44,7 @@
 	<!--end::Head-->
 	<!--begin::Body-->
 	<body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled aside-fixed aside-default-enabled">
-	
+		
 		<!--begin::Card-->
 		<div class="card">
 			<!--begin::Card header-->
@@ -54,7 +53,7 @@
 				<div class="card-toolbar" style="text-align: center;">
 					<!--begin::Toolbar-->
 					<div class="d-flex justify-content-center" data-kt-user-table-toolbar="base">
-						<h1 style="font-size: 36px;">대&nbsp;금&nbsp;지&nbsp;급&nbsp;결&nbsp;의&nbsp;서</h1>							
+						<h1 style="font-size: 36px;">휴&nbsp;&nbsp;가&nbsp;&nbsp;신&nbsp;&nbsp;청&nbsp;&nbsp;서</h1>							
 					</div>
 					<!--end::Toolbar-->							
 				</div>
@@ -91,45 +90,35 @@
 					<span class="input-group-text flex-grow-1" id="inputGroup-sizing-default" style="width: 20%;">제목</span>
 					<input type="text" class="form-control flex-grow-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" style="width: 80%;"/>
 				</div>
-				<!--end::Input group-->										
-
-				<div class="input-group mb-5" style="margin-top: 20px;">
-					<span class="input-group-text" id="inputGroup-sizing-default" style="width: 20%;">발주번호&nbsp;&nbsp;
-						<button type="button" class="btn btn-light-primary btn-sm mt-2 me-2" data-bs-toggle="modal" data-bs-target="#kt_modal_2">검색</button>	
-					</span>											
-					<input type="text" class="form-control flex-grow-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"/>
-				</div>
-				
-				<div class="table-responsive">											
-					<table class="table table-rounded table-striped border gy-7 gs-7">		
-						<thead>
-							<tr class="fw-semibold fs-6 text-gray-800 border-bottom border-gray-200">
-								<th style="font-weight: 600;">번호</th>
-								<th style="font-weight: 600;">품명</th>
-								<th style="font-weight: 600;">수량</th>
-								<th style="font-weight: 600;">단가</th>
-								<th style="font-weight: 600;">금액</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>1</td>
-								<td></td>
-								<td></td>
-								<td></td>
-								<td></td>
-							</tr>
-							<tr>
-								<td>2</td>
-								<td></td>
-								<td></td>
-								<td></td>
-								<td></td>
-							</tr>
-						</tbody>
+				<!--end::Input group-->
+				<div class="table-responsive">
+					<table class="table table-bordered">
+						<tr class="fw-bold fs-6 text-gray-800">
+							<th style="width: 20%; background-color: #f8f9fa; font-size: inherit;">휴가종류</th>
+							<td>
+								<select name="kt_customers_table_length" aria-controls="kt_customers_table" class="form-select form-select-sm form-select-solid" style="width: 30%;">
+									<option value="50">연가</option>
+									<option value="51">병가</option>
+									<option value="52">공가</option>
+								</select>	
+							</td>
+						</tr>
 						<tr>
-							<td colspan="4" style="text-align: center; font-weight: 600;">합 계 금 액</td>
-							<td></td>
+							<th style="width: 20%; background-color: #f8f9fa; font-size: inherit;">신청기간</th>
+							<td>
+								<div class="d-flex align-items-center">
+									<div class="mb-0" style="width: 50%;">
+										<input class="form-control form-control-solid" placeholder="Pick date rage" id="kt_daterangepicker_1"/>
+									</div>	
+									&nbsp;&nbsp;&nbsp;&nbsp;신청일수 : <div class="numberofday m1-2" style="width: 10%;"></div> 일
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<th style="width: 20%; background-color: #f8f9fa; font-size: inherit;">휴가사유</th>
+							<td>
+								<input type="text" class="form-control flex-grow-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" style="width: 80%;"/>
+							</td>
 						</tr>
 					</table>
 				</div>
@@ -201,81 +190,22 @@
 				</form>
 				<!--end::Form 파일첨부 -->							
 			</div>
+			<!--end::CardBody-->
 		</div>
-	
-		<!--begin::modal-->
-		<div class="modal fade" tabindex="-1" id="kt_modal_2" role="dialog">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h3 class="modal-title">발주번호 검색</h3>
-						<!--begin::Close-->
-						<div class="btn btn-icon btn-sm btn-active-light-primary ms-2" data-bs-dismiss="modal" aria-label="Close">
-							<i class="ki-duotone ki-cross fs-1"><span class="path1"></span><span class="path2"></span></i>
-						</div>
-						<!--end::Close-->
-					</div>
-
-					<div class="modal-body">
-						<div class="mb-0 row" style="margin: 10px;">
-							<div class="col-3 d-flex align-items-center">
-								<label class="form-label mb-0">날짜선택</label>
-							</div>
-							<div class="col-9 col-md-8">
-								<input class="form-control form-control-solid" placeholder="Pick date range" id="kt_daterangepicker_3"/>
-							</div>
-						</div><hr>
-						<div class="table-responsive">
-							<table class="table table-bordered">
-								<thead>
-									<tr class="fw-bold fs-6 text-gray-800">
-										<th>발주일자</th>
-										<th>발주번호</th>
-										<th>발주부서</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td></td>
-										<td>
-											<a href="" class="text-gray-800 text-hover-primary mb-1">${orderNo}</a>
-										</td>
-										<td></td>
-									</tr>
-								</tbody>								
-							</table>
-						</div>						
-					</div>
-
-					<div class="modal-footer" style="display: flex; justify-content: center;">
-						<button type="button" class="btn btn-primary">저장</button>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!--end::modal-->
+		<!--end::Card-->
 								
 		<!--begin::Javascript-->
 		<!--begin::Global Javascript Bundle(mandatory for all pages)-->
-		<!-- <script src="resource/assets/plugins/global/plugins.bundle.js"></script>
-		<script src="resource/assets/js/scripts.bundle.js"></script> -->
+		<!-- <script src="assets/plugins/global/plugins.bundle.js"></script>
+		<script src="assets/js/scripts.bundle.js"></script> -->
 		<!--end::Global Javascript Bundle-->
 		<!--end::Javascript-->
 	</body>
 	<!--end::Body-->
-	<script>		
-		$(document).ready(function(){
-			$('#kt_modal_2').on('shown.bs.modal', function(){
-				$("#kt_daterangepicker_3").daterangepicker({
-					singleDatePicker: true,
-					showDropdowns: true,
-					minYear: 1901,
-					maxYear: parseInt(moment().format("YYYY"),12)
-				});
-			});
-		});
+	<script>
+		$("#kt_daterangepicker_1").daterangepicker();	
 
-
+		
 		// set the dropzone container id
 		const id = "#kt_dropzonejs_example_2";
 		const dropzone = document.querySelector(id);
