--- a/src/main/resources/static/business_draft_test.html
+++ b/src/main/resources/static/business_draft_test.html
@@ -64,13 +64,13 @@
 				<!--begin::Input group-->
 				<div class="input-group mb-5">
 					<span class="input-group-text flex-grow-1" id="inputGroup-sizing-default" style="width: 20%;">제목</span>
-					<input type="text" name="subject" id="inputSubject" class="form-control flex-grow-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" style="width: 80%;"/>
+					<input type="text" name="appr_subject" id="inputSubject" class="form-control flex-grow-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" style="width: 80%;"/>
 				</div>
 				<!--end::Input group-->
 				
 				<!--begin::editor-->
 				<div class="py-5" data-bs-theme="light">
-					<textarea name="content" id="kt_docs_ckeditor_classic"></textarea>												
+					<textarea name="appr_content" id="kt_docs_ckeditor_classic"></textarea>												
 				</div>	
 				<!--end::editor-->	
 					
