--- a/src/main/resources/static/business_draft_test.html
+++ b/src/main/resources/static/business_draft_test.html
@@ -28,7 +28,7 @@
 	<!--end::Head-->
 	<!--begin::Body-->
 	<body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled aside-fixed aside-default-enabled">
-		
+		<input type="hidden" name="common_idx" id="common_idx" value="30">
 		<!--begin::Card-->
 		<div class="card">
 			<!--begin::Card header-->
@@ -64,13 +64,13 @@
 				<!--begin::Input group-->
 				<div class="input-group mb-5">
 					<span class="input-group-text flex-grow-1" id="inputGroup-sizing-default" style="width: 20%;">제목</span>
-					<input type="text" name="appr_subject" id="inputSubject" class="form-control flex-grow-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" style="width: 80%;"/>
+					<input type="text" name="appr_subject" id="appr_subject" class="form-control flex-grow-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" style="width: 80%;"/>
 				</div>
 				<!--end::Input group-->
 				
 				<!--begin::editor-->
 				<div class="py-5" data-bs-theme="light">
-					<textarea name="appr_content" id="kt_docs_ckeditor_classic"></textarea>												
+					<textarea name="appr_content" id="kt_docs_ckeditor_classic" class="appr_content"></textarea>												
 				</div>	
 				<!--end::editor-->	
 					
@@ -162,15 +162,37 @@
 	</body>
 <!--end::Body-->
 <script>
+var myEditor;
+var appr_content;
 ClassicEditor
 	.create(document.querySelector('#kt_docs_ckeditor_classic'))
 	.then(editor => {
 		console.log(editor);
+		myEditor = editor;
+		handleEditorData();
 	})
 	.catch(error => {
 		console.error(error);
 	});
 
+function handleEditorData(){
+	appr_content = myEditor.getData();	
+}
+var ApprovalDto;
+var appr_subject = document.getElementById('appr_subject').value;
+var common_idx = document.getElementById('common_idx').value;
+console.log(common_idx);
+//업무기안문 결재 양식에 필요한 DTO
+var bdForm = {
+    commonIdx: common_idx,
+    apprSubject: appr_subject,
+    apprContent: appr_content,
+    approvalLines: approvalLines,
+    receivers: receivers
+};
+if(common_idx==30){
+	ApprovalDto = bdForm
+}
 
 // set the dropzone container id
 	const id = "#kt_dropzonejs_example_2";
