임시저장 문서 재 저장 완료. 임시저장문서 결재선 및 수신자 수정 작업 진행중

--- a/src/main/resources/static/business_draft_test.html
+++ b/src/main/resources/static/business_draft_test.html
@@ -161,17 +161,22 @@
 	</body>
 <!--end::Body-->
 <script>
+
 var myEditor;
-ClassicEditor
-	.create(document.querySelector('#kt_docs_ckeditor_classic'))
-	.then(editor => {
-		console.log(editor);
-		myEditor = editor;
-		// myEditor.setData(apprContent);
-	})
-	.catch(error => {
-		console.error(error);
-	});
+  // CKEditor 초기화 코드
+  ClassicEditor
+     .create(document.querySelector('#kt_docs_ckeditor_classic'))
+     .then(editor => {
+    	 myEditor = editor;
+        // 메인 페이지에서 받아온 데이터를 사용하여 CKEditor에 설정
+        if (apprContent) {
+           myEditor.setData(apprContent);
+        }
+     })
+     .catch(error => {
+        console.error(error);
+     });
+
 
 // set the dropzone container id
 	const id = "#kt_dropzonejs_example_2";
