1/8 전자결재(결재, 반려 처리 완료 / 결재에 따른 detail 수정 중(반려시 의견 모달창에 뜨게, 문서번호, 파일 업로드, 휴가/대금지급 연계, 리스트 페이징 처리 등)

--- a/src/main/resources/static/payment_resolution_test.html
+++ b/src/main/resources/static/payment_resolution_test.html
@@ -53,7 +53,7 @@
 			</div>
 			<!--end::Card header-->
 			<!--begin::Card body-->
-			<div class="card-body py-4">
+			<div class="card-bodyform py-4">
 				<div class="d-flex justify-content-end mb-4" style="margin-bottom: 30px;">
 					<!-- 결재자 테이블 -->
 					<table class="signature-table mr-3" id="apprListTable">
