결재 완료시 문서번호 생성 및 휴가신청서 결재완료시 연차차감 및 스케쥴 테이블에 내용 추가되도록 처리

--- a/src/main/resources/static/reqVac_test.html
+++ b/src/main/resources/static/reqVac_test.html
@@ -198,13 +198,13 @@
 		if(start.isBefore(today)){
 			alert('시작일은 오늘 날짜 이후여야 합니다.')
 			$("#kt_daterangepicker_1").data('daterangepicker').setStartDate(today);
-	        leaveStartDate = today.format('YYYY-MM-DD');
-	        leaveEndDate = end.format('YYYY-MM-DD');
+	        leaveStartDate = today.startOf('day').set({ hour: 9, minute: 0, second: 0, millisecond: 0 }).format('YYYY-MM-DD');
+	        leaveEndDate = end.startOf('day').set({ hour: 18, minute: 0, second: 0, millisecond: 0 }).format('YYYY-MM-DD');
 	        $('#leaveStartDate').val(leaveStartDate);
 	        $('#leaveEndDate').val(leaveEndDate);
 		}else{
-	        leaveStartDate = start.format('YYYY-MM-DD');
-	        leaveEndDate = end.format('YYYY-MM-DD'); 
+	        leaveStartDate = start.startOf('day').set({ hour: 9, minute: 0, second: 0, millisecond: 0 }).format('YYYY-MM-DD');
+	        leaveEndDate = end.startOf('day').set({ hour: 18, minute: 0, second: 0, millisecond: 0 }).format('YYYY-MM-DD'); 
 	        console.log("시작일 : "+leaveStartDate);
 	        console.log("종료일 : "+leaveEndDate);
 	        $('#leaveStartDate').val(leaveStartDate);
